--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,28 +10,21 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
+
+  <!-- dependency stylesheets -->
+  <link rel="stylesheet" type="text/css" href="{{ '/.grunt/grunt-contrib-jasmine/jasmine.css' | prepend: site.baseurl }}">
+  <link rel="stylesheet" type="text/css" href="{{ '/css/spectrum.css' | prepend: site.baseurl }}">
+
   <!-- dependencies -->
-  <script src="lib/jquery-2.1.3.js"></script>
-  <script src="lib/jquery-ui-1.11.2-core.js"></script>
-  <script src="lib/spectrum.js"></script>
-  <link rel="stylesheet" type="text/css" href="/css/spectrum.css">
+  <script src="{{ '/lib/jquery-2.1.3.js' | prepend: site.baseurl }}"></script>
+  <script src="{{ '/lib/jquery-ui-1.11.2-core.js' | prepend: site.baseurl }}"></script>
+  <script src="{{ '/lib/spectrum.js' | prepend: site.baseurl }}"></script>
 
   <!-- source -->
-  <script src="src/CssPropertyInfo.js"></script>
-  <script src="src/jquery.ui.styleTweaker.js"></script>
+  <script src="{{ '/src/CssPropertyInfo.js' | prepend: site.baseurl }}"></script>
+  <script src="{{ '/src/jquery.ui.styleTweaker.js' | prepend: site.baseurl }}"></script>
 
-  <link rel="stylesheet" type="text/css" href="/css/tweaker.css?{{ site.time | date:'%Y%m%d%U%H%N%S' }}">
-  <link rel="stylesheet" type="text/css" href="/css/tweaker_demo.css?{{ site.time | date:'%Y%m%d%U%H%N%S' }}">
-
-  <!-- jasmine -->
-  <link rel="shortcut icon" type="image/png" href="/.grunt/grunt-contrib-jasmine/jasmine_favicon.png">
-  <link rel="stylesheet" type="text/css" href="/.grunt/grunt-contrib-jasmine/jasmine.css">
-
-  <!-- TODO: look into disabling this in production -->
-  <meta http-equiv="cache-control" content="max-age=0" />
-  <meta http-equiv="cache-control" content="no-cache" />
-  <meta http-equiv="expires" content="0" />
-  <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
-  <meta http-equiv="pragma" content="no-cache" />
+  <link rel="stylesheet" type="text/css" href="{{ '/css/tweaker.css' | prepend: site.baseurl }}">
+  <link rel="stylesheet" type="text/css" href="{{ '/css/tweaker_demo.css' | prepend: site.baseurl }}">
 
 </head>
