Some styling and change demo

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,4 +27,7 @@
   <link rel="stylesheet" type="text/css" href="{{ '/css/tweaker.css' | prepend: site.baseurl }}">
   <link rel="stylesheet" type="text/css" href="{{ '/css/tweaker_demo.css' | prepend: site.baseurl }}">
 
+  <!-- github syntax override -->
+  <link rel="stylesheet" type="text/css" href="{{ '/css/jekyll-github-syntax.css' | prepend: site.baseurl }}">
+
 </head>
