--- a/css/tweaker.css
+++ b/css/tweaker.css
@@ -4,6 +4,7 @@
   overflow: auto;
   border: 1px solid black;
   background-color: lightgray;
+  margin: 20px auto 20px auto;
 }
 
 .tweaker-control {
